added denyAccessToLoggedUsers mw, added excluded fields for controllers queries, code cleaning, openai doc updated
