# controllers/userController.js
@@ -5,7 +5,8 @@ const userController = {
   getOneUser: async (req, res) => {
 
     try {
-      const user = await UserModel.findById(req.params.id).select('-password');
+      const excludedFields = '-password -__v -updatedAt';
+      const user = await UserModel.findById(req.params.id).select(excludedFields);
       res.status(200).json({ user });
     } catch (e) {
       res.status(500).json(err);
@@ -17,7 +18,8 @@ const userController = {
 
     try {
       const filter = { validated: false };
-      const users = await UserModel.find(filter).select('-password');
+      const excludedFields = '-password -__v';
+      const users = await UserModel.find(filter).select(excludedFields);
       res.status(200).json({ users });
     } catch (e) {
       res.status(500).json(err);
@@ -30,8 +32,9 @@ const userController = {
     try {
       const update = { validated: true };
       const options = { new: true };
-      const user = await UserModel.findByIdAndUpdate(req.params.id, update, options).select('-password');
-      res.status(200).json({ message: 'Member successfully validated', user });
+      const excludedFields = '-password -__v -updatedAt';
+      const user = await UserModel.findByIdAndUpdate(req.params.id, update, options).select(excludedFields);
+      res.status(200).json({ message: 'Member successfully validated' });
     } catch (e) {
       res.status(500).json(err);
     }
@@ -40,14 +43,12 @@ const userController = {
 
   refuseSubscription: async (req, res) => {
 
-    // considering that new subscribers already have the validated attribute set automatically to false when signing in
-    // this method may appear useless and yet it allows an admin to remove the access of an already validated user if needed
-    // so, it should be named 'banValidatedMember' instead but I kept its current name to avoid confusion and/or in case of future changes
     try {
       const update = { validated: false };
       const options = { new: true };
-      const user = await UserModel.findByIdAndUpdate(req.params.id, update, options).select('-password');
-      res.status(200).json({ message: 'Member successfully disabled', user });
+      const excludedFields = '-password -__v -updatedAt';
+      const user = await UserModel.findByIdAndUpdate(req.params.id, update, options).select(excludedFields);
+      res.status(200).json({ message: 'Member successfully disabled' });
     } catch (e) {
       res.status(500).json(err);
     }
