# middleware/authenticateToken.js
@@ -2,33 +2,30 @@ const jwt = require('jsonwebtoken');
 
 module.exports = {
 
-  authenticateToken: async (req, res, next) => {
+  authenticateToken: (req, res, next) => {
 
-    // if no auth bearer is provided or if the bearer is empty
-    if (
-      !req.headers['authorization'] ||
-      typeof req.headers['authorization'].split(' ')[1] === 'undefined'
-    ) {
+    if (!req.headers['authorization'] || typeof req.headers['authorization'].split(' ')[1] === 'undefined') {
+
       return res.sendStatus(401); //unauthorized 
+
+    } else {
+
+      const token = req.headers['authorization'].split(' ')[1];
+
+      jwt.verify(token, process.env.JWT_SECRET, (err, data) => {
+
+        if (err) {
+          res.cookie('jwt', '', { maxAge: 0 });
+          return res.sendStatus(403); //forbidden
+        } else {
+          req.user = data.user;
+          console.log('Authentication succeded - User: ', req.user.username, ' // id: ', req.user._id, ' // path: ', req.url); // log for demonstration purposes
+          next();
+        }
+
+      });
+
     }
-
-    const token = req.headers['authorization'].split(' ')[1];
-
-    await jwt.verify(token, process.env.JWT_SECRET, async (err, data) => {
-
-      if (err) {
-        res.cookie('jwt', '', { maxAge: 0 });
-        return res.sendStatus(403); //forbidden
-      };
-
-      req.user = data.user;
-
-    });
-
-    // log for demonstration purposes
-    console.log('Authentication succeded - User: ', req.user.username, ' // id: ', req.user._id, ' // path: ', req.url);
-
-    next();
   }
 
 };
